fix alignment and font style on .content3

--- a/css/style.css
+++ b/css/style.css
@@ -13,13 +13,11 @@ body {
     align-items: center;
     background-color: #1f2937;
 }
-
     .logo {
     font-size: 24px;
     font-weight: bolder;
     color: #f9faf8;
 }
-
     .right-links {
     display: flex;
     gap: 16px ;
@@ -34,12 +32,19 @@ body {
     font-weight: bolder;
     color: #f9faf8;
 }
+    .hero {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+}
     .secondary-text {
         display: flex;
         flex-direction: column;
         font-size: 18px;
         color: #e5e7eb;
 }
+
+
 .content2 {
     display: flex;
     flex-wrap: wrap;
@@ -48,51 +53,47 @@ body {
     color: #1f2937;
     padding: 50px;
 }
-
     .bold{
         font-weight: 600;
     }
-
-img {
-    /* background-color: #1f2937; */
-    width: auto;
-    height: auto;
+    img {
+        width: auto;
+        height: auto;
 }
-
-.title {
-    font-weight: 800 ;
-    font-size: 36px;
-    padding-bottom: 50px;
+    .title {
+        font-weight: 800 ;
+        font-size: 36px;
+        padding-bottom: 50px;
 }
-
-.container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 50px;
-    flex-shrink: 1;
+    .container {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 50px;
+        flex-shrink: 1;
 }
-
-.box {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    max-width: 200px;
-    font-size: 18px;
-    font-weight: normal;
-    color: #1f2937;
-    gap: 16px;
+    .box {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        max-width: 200px;
+        font-size: 18px;
+        font-weight: normal;
+        color: #1f2937;
+        gap: 16px;
     
 }
-
-.posterborder {
-    background-color: rgb(241, 235, 216);
-    border-style: solid;
-    border-color: #3882f6;
-    border-radius: 5px;
+    .posterborder {
+        background-color: rgb(241, 235, 216);
+        border-style: solid;
+        border-color: #3882f6;
+        border-radius: 5px;
+}
+    .text {
+        display: flex;
+        justify-content: center;
 }
 
-
-.content3 {
+.content3 { 
     display: flex;
     flex-direction: column;
     background-color: #e5e7eb;
@@ -100,7 +101,19 @@ img {
     font-style: italic;
     color: #1f2937;
     padding: 50px;
+    flex-wrap: wrap;
+    align-items: flex-end;
+    align-content: space-around;
 }
+    .title-2 {    
+        display: flex;
+        font-weight: 800;
+        font-size: 30px;
+        font-style: normal;
+        justify-content: flex-end;
+    }
+    
+
 
 .button {
     background-color: #3882f6;
@@ -117,16 +130,4 @@ ul {
     margin: 0;
     padding: 0;
     list-style: none;
-}
-
-
-.text {
-    display: flex;
-    justify-content: center;
-}
-
-.hero {
-    display: flex;
-    flex-direction: column;
-    flex: 1;
 }
